--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,13 +35,37 @@ bind x kill-pane
 
 
 ##### simple status base, theme will color unless overridden below
-set -g status-position top
+set -g status-position bottom
+
+##### Mountain Serenity theme (Omarchy Blueridge Dark)
+set -g status-interval 1
+set -g status-justify left
+set -g status-left-length 40
+set -g status-right-length 80
+
+set -g status-style "bg=#1c2128,fg=#c4b5a0"
+set -g status-left '#[fg=#1c2128,bg=#7ec8c8,bold] #S #[fg=#7ec8c8,bg=#1c2128]#[fg=#c4b5a0,bg=#1c2128] '
+set -g status-right ''
+
+set -g window-status-separator ""
+set -g window-status-format '#[fg=#1c2128,bg=#2c3640] #[fg=#c4b5a0,bg=#2c3640]#I#[fg=#c4b5a0]#[fg=#c4b5a0]#W#{?window_flags, #[fg=#d4af37]#F #[fg=#c4b5a0],} #[fg=#2c3640,bg=#1c2128]'
+set -g window-status-current-format '#[fg=#1c2128,bg=#7ec8c8] #[fg=#1c2128,bg=#7ec8c8,bold]#I#[fg=#1c2128]#[fg=#1c2128]#W#{?window_flags, #[fg=#d4af37]#F #[fg=#1c2128],} #[fg=#7ec8c8,bg=#1c2128]'
+
+set -g pane-border-style "fg=#2c3640"
+set -g pane-active-border-style "fg=#7ec8c8"
+set -g display-panes-colour "#2c3640"
+set -g display-panes-active-colour "#d4af37"
+
+set -g message-style "bg=#7ec8c8,fg=#1c2128"
+set -g message-command-style "bg=#7ea67c,fg=#1c2128"
+set -g mode-style "bg=#7ea67c,fg=#1c2128"
+set -g copy-mode-match-style "bg=#d4af37,fg=#1c2128"
+set -g copy-mode-current-match-style "bg=#f4e4bc,fg=#1c2128"
+set -g clock-mode-colour "#7ec8c8"
 
 ##### reload
 bind r source-file ~/.tmux.conf \; display-message "tmux reloaded"
 
 ##### plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark'
 run '~/.tmux/plugins/tpm/tpm'
