--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -63,7 +63,7 @@
     "on-click": "$TERMINAL -e btop",
   },
   "clock": {
-    "format": "{:L%A %B %d %I:%M}",
+    "format": "{:L%A %B %d %I:%M %p}",
     // "format-alt": "{:L%d %B W%V %Y}",
     "tooltip": false,
     "on-click-right": "omarchy-cmd-tzupdate",
