--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -18,6 +18,7 @@ bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google
 bindd = SUPER, O, Notion, exec, omarchy-launch-webapp "https://www.notion.so/2dec3ace798b4f4fa168727501b15ceb"
 bindd = SUPER, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
+bindd = SUPER, L, Linear, exec, omarchy-launch-webapp "https://linear.app/panday-team/team/PAN/all"
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
