--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -13,11 +13,11 @@
 
 # Straight 1x setup for low-resolution displays like 1080p or 1440p
 env = GDK_SCALE,1
-monitor = DP-3,highrr, 0x0, 1
+monitor = DP-1,1920x1080@143.98, 0x0, 1
 monitor = eDP-1,1920x1080@60.00, 1920x0,1
 
-workspace = name:main, monitor:DP-3, default:true
+workspace = name:main, monitor:DP-1, default:true
 
 # Example for Framework 13 w/ 6K XDR Apple display
 # monitor = DP-5, 6016x3384@60, auto, 2
-# monitor = eDP-1, 2880x1920@120, auto, 2
+# monitor = eDP-1, 2880x1920@120, auto, 3
