--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -3,11 +3,11 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_options = compose:caps # ,grp:alts_toggle
+  kb_options = compose:caps, altwin:swap_alt_win # ,grp:alts_toggle
 
   # Change speed of keyboard repeat
-  repeat_rate = 40
-  repeat_delay = 600
+  repeat_rate = 70
+  repeat_delay = 200
 
   # Start with numlock on by default
   numlock_by_default = true
@@ -17,7 +17,7 @@ input {
 
   touchpad {
     # Use natural (inverse) scrolling
-    # natural_scroll = true
+    natural_scroll = true
 
     # Use two-finger clicks for right-click instead of lower-right corner
     # clickfinger_behavior = true
@@ -32,4 +32,4 @@ windowrule = scrolltouchpad 1.5, tag:terminal
 
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
-# gesture = 3, horizontal, workspace
+gesture = 3, horizontal, workspace
