--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,71 +1,58 @@
-
-##### terminal and colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*:RGB"
-set -g xterm-keys on
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark256'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 ##### mouse and selection
-# mouse off so Ghostty handles drag-to-copy to system clipboard
 set -g mouse off
-# keep OSC52 enabled in case you turn mouse on later
 set -g set-clipboard on
-
 ##### sane defaults
-set -g escape-time 10
-set -g focus-events on
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 set -g allow-passthrough on
+# set date in US notation
 
-##### splits and windows inherit cwd
-bind '"' split-window -v -c "#{pane_current_path}"
-bind %   split-window -h -c "#{pane_current_path}"
+##### windows inherit cwd
 bind c   new-window    -c "#{pane_current_path}"
-
-##### pane resize, repeatable with arrows
-bind -r Left  resize-pane -L 5
-bind -r Right resize-pane -R 5
-bind -r Up    resize-pane -U 5
-bind -r Down  resize-pane -D 5
 
 ##### kill pane without confirmation
 unbind x
 bind x kill-pane
 
 
-##### simple status base, theme will color unless overridden below
-set -g status-position bottom
+# blue theme if i ever want to swtich, is the same style as the gruvbox dark theme just with different colors
+# set -g status-interval 1
+# set -g status-justify left
+# set -g status-left-length 40
+# set -g status-right-length 80
+#
+# set -g status-style "bg=#1c2128,fg=#c4b5a0"
+# set -g status-left '#[fg=#1c2128,bg=#7ec8c8,bold] #S #[fg=#7ec8c8,bg=#1c2128]#[fg=#c4b5a0,bg=#1c2128] '
+# set -g status-right ''
+#
+# set -g window-status-separator ""
+# set -g window-status-format '#[fg=#1c2128,bg=#2c3640] #[fg=#c4b5a0,bg=#2c3640]#I#[fg=#c4b5a0]#[fg=#c4b5a0]#W#{?window_flags, #[fg=#d4af37]#F #[fg=#c4b5a0],} #[fg=#2c3640,bg=#1c2128]'
+# set -g window-status-current-format '#[fg=#1c2128,bg=#7ec8c8] #[fg=#1c2128,bg=#7ec8c8,bold]#I#[fg=#1c2128]#[fg=#1c2128]#W#{?window_flags, #[fg=#d4af37]#F #[fg=#1c2128],} #[fg=#7ec8c8,bg=#1c2128]'
+#
+# set -g pane-border-style "fg=#2c3640"
+# set -g pane-active-border-style "fg=#7ec8c8"
+# set -g display-panes-colour "#2c3640"
+# set -g display-panes-active-colour "#d4af37"
+#
+# set -g message-style "bg=#7ec8c8,fg=#1c2128"
+# set -g message-command-style "bg=#7ea67c,fg=#1c2128"
+# set -g mode-style "bg=#7ea67c,fg=#1c2128"
+# set -g copy-mode-match-style "bg=#d4af37,fg=#1c2128"
+# set -g copy-mode-current-match-style "bg=#f4e4bc,fg=#1c2128"
+# set -g clock-mode-colour "#7ec8c8"
 
-##### Mountain Serenity theme (Omarchy Blueridge Dark)
-set -g status-interval 1
-set -g status-justify left
-set -g status-left-length 40
-set -g status-right-length 80
 
-set -g status-style "bg=#1c2128,fg=#c4b5a0"
-set -g status-left '#[fg=#1c2128,bg=#7ec8c8,bold] #S #[fg=#7ec8c8,bg=#1c2128]#[fg=#c4b5a0,bg=#1c2128] '
-set -g status-right ''
-
-set -g window-status-separator ""
-set -g window-status-format '#[fg=#1c2128,bg=#2c3640] #[fg=#c4b5a0,bg=#2c3640]#I#[fg=#c4b5a0]#[fg=#c4b5a0]#W#{?window_flags, #[fg=#d4af37]#F #[fg=#c4b5a0],} #[fg=#2c3640,bg=#1c2128]'
-set -g window-status-current-format '#[fg=#1c2128,bg=#7ec8c8] #[fg=#1c2128,bg=#7ec8c8,bold]#I#[fg=#1c2128]#[fg=#1c2128]#W#{?window_flags, #[fg=#d4af37]#F #[fg=#1c2128],} #[fg=#7ec8c8,bg=#1c2128]'
-
-set -g pane-border-style "fg=#2c3640"
-set -g pane-active-border-style "fg=#7ec8c8"
-set -g display-panes-colour "#2c3640"
-set -g display-panes-active-colour "#d4af37"
-
-set -g message-style "bg=#7ec8c8,fg=#1c2128"
-set -g message-command-style "bg=#7ea67c,fg=#1c2128"
-set -g mode-style "bg=#7ea67c,fg=#1c2128"
-set -g copy-mode-match-style "bg=#d4af37,fg=#1c2128"
-set -g copy-mode-current-match-style "bg=#f4e4bc,fg=#1c2128"
-set -g clock-mode-colour "#7ec8c8"
-
-##### reload
-bind r source-file ~/.tmux.conf \; display-message "tmux reloaded"
-
-##### plugins
-set -g @plugin 'tmux-plugins/tpm'
 run '~/.tmux/plugins/tpm/tpm'
+
+# below this are any theme or plugin overrides
+
+set -g status-right '' 
+set -g status-position top
