--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -7,6 +7,7 @@ bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER, O, notes, exec, omarchy-launch-or-focus notion-app-electron
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
@@ -15,7 +16,6 @@ bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com/calendar/u/1/r"
-bindd = SUPER, O, Notion, exec, omarchy-launch-webapp "https://www.notion.so/2dec3ace798b4f4fa168727501b15ceb"
 bindd = SUPER, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
 bindd = SUPER, L, Linear, exec, omarchy-launch-webapp "https://linear.app/panday-team/team/PAN/all"
