--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 ##### mouse and selection
-set -g mouse off
+set -g mouse on
 set -g set-clipboard on
 ##### sane defaults
 set -g base-index 1
