--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -2,21 +2,22 @@ general {
     lock_cmd = omarchy-lock-screen                         # lock screen and 1password
     before_sleep_cmd = loginctl lock-session               # lock before suspend.
     after_sleep_cmd = hyprctl dispatch dpms on             # to avoid having to press a key twice to turn on the display.
-    inhibit_sleep = 3                                      # wait until screen is locked
+    inhibit_sleep = 5                                      # wait until screen is locked
 }
 
-# listener {
-    # timeout = 150                                             # 2.5min
-    # on-timeout = pidof hyprlock || omarchy-launch-screensaver # start screensaver (if we haven't locked already)
-# }
+listener {
+  timeout = 240 
+  on-timeout = brightnessctl -s set 10
+  on-resume = brightnessctl -r
+}
 
 listener {
-    timeout = 300                      # 5min
+    timeout = 480                      # 9min
     on-timeout = loginctl lock-session # lock screen when timeout has passed
 }
 
 listener {
-    timeout = 330                                            # 5.5min
+    timeout = 500                                            
     on-timeout = hyprctl dispatch dpms off                   # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on && brightnessctl -r # screen on when activity is detected
 }
