--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -3,10 +3,10 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_options = compose:caps,# ,grp:alts_toggle
+  kb_options = compose:caps, altwin:swap_alt_win# ,grp:alts_toggle
 
   # Change speed of keyboard repeat
-  repeat_rate = 80
+  repeat_rate = 70
   repeat_delay = 200
 
   # Start with numlock on by default
@@ -22,7 +22,7 @@ input {
     # clickfinger_behavior = true
 
     # Control the speed of your scrolling
-    scroll_factor = 0.4
+    scroll_factor = 0.2
   }
 }
 
