--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,11 +1,10 @@
 # Application bindings
 $terminal = uwsm app -- $TERMINAL
-$browser = omarchy-launch-browser
+$browser = uwsm app -- helium-browser --ozone-platform=wayland
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, O, notes, exec, omarchy-launch-or-focus notion-app-electron
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
@@ -19,6 +18,7 @@ bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google
 bindd = SUPER, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
 bindd = SUPER, L, Linear, exec, omarchy-launch-webapp "https://linear.app/panday-team/team/PAN/all"
+bindd = SUPER, X, X, exec, omarchy-launch-webapp  "https://www.x.com"
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
