--- a/.config/hypr/looknfeel.conf
+++ b/.config/hypr/looknfeel.conf
@@ -8,6 +8,8 @@ general {
     float_gaps=0
     # Use master layout instead of dwindle
     # layout = master
+    workspace = 10, on-created-empty:spotify, persistent:true
+  windowrulev2 = workspace 10 silent, class:^(Spotify)$
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
