--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,51 +1,79 @@
-# Source: https://github.com/Chick2D/neofetch-themes/
 
-# Made by https://github.com/HimDek/ (HimDek)
-# A matching oh-my-zsh theme: https://github.com/HimDek/Acenoster-ZSH-Theme/
-
-# Customization Wiki https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
+# Made by M3TOZZ
 
 print_info() {
-    
-    info "${cl2} ╭─" distro
-    info "${cl2} ├─" kernel
-	info "${cl2} ├─" users
-    info "${cl2} ├─󰏗" packages
-    info "${cl2} ╰─" shell
-    echo
-    info "${cl6} ╭─" de
-    info "${cl6} ├─" term
-	info "${cl6} ├─" term_font
-	info "${cl6} ├─󰂫" theme
-	info "${cl6} ├─󰂫" icons
-	info "${cl6} ╰─" font
-    echo
-    info "${cl4} ╭─" model
-    info "${cl4} ├─󰍛" cpu
-    info "${cl4} ├─󰍹" gpu
-#	info "${cl4} ├─" gpu_driver
-    info "${cl4} ├─" resolution
-    info "${cl4} ├─" memory
-	info "${cl4} ├─ ${cl0}" disk
-#	info "${cl4} ├─󰁹 ${cl0} " battery 
-    info "${cl4} ╰─󰄉" uptime
-    
-	prin " "
-	prin " \n \n \n \n \n \n ${cl3} \n \n ${cl5} \n \n ${cl2}  \n \n ${cl6}  \n \n ${cl4}  \n \n ${cl1}  \n \n ${cl7}  \n \n ${cl0}  \n \n "
-    
+    # info title
+    # info underline
+    prin "\n"
+    # info underline
+    info "\n \n " distro
+    info "\n \n " model
+    info "\n \n " kernel
+    info "\n \n " uptime
+    info "\n \n " packages
+    info "\n \n " shell
+    info "\n \n " resolution
+    info "\n \n " de
+    info "\n \n " wm
+    info "\n \n 嗀"wm_theme
+    info "\n \n 嗀"theme
+    info "\n \n " icons
+    info "\n \n " term
+    info "\n \n " term_font
+    info "\n \n " cpu
+    info "\n \n " gpu
+    info "\n \n " memory
+    info "\n \n " disk
+    # info "\n \n " battery
+    info "\n \n " font
+    info "\n \n " song
+    [[ "$player" ]] && prin "\n \n " "$player"
+    info "\n \n " local_ip
+    # info "Public IP" public_ip 
+    # prin "${cl9}                     ${cl0} ${cl1} ${cl2} ${cl3} ${cl4} ${cl5} ${cl6} $(color 15) ${cl9}"
+    # info "Users" users
+    # info "Locale" locale  # This only works on glibc systems.
+    # info cols
+    prin "\n"
+
+    # prin "\n \n ${cl0}──${cl1}────${cl2}────${cl3}────${cl4}────${cl5}────${cl6}────${cl7}──"
+    #
+    # prin "\n \n \n \n \n \n ${cl0}⬤ \n \n ${cl1}⬤ \n \n ${cl2}⬤ \n \n ${cl3}⬤ \n \n ${cl4}⬤ \n \n ${cl5}⬤ \n \n ${cl6}⬤ \n \n ${cl7}⬤"
 }
 
-##--------- Title
+reset="\033[0m"
+gray="\033[1;90m"
+red="\033[1;31m"
+green="\033[1;32m"
+yellow="\033[1;33m"
+blue="\033[1;34m"
+magenta="\033[1;35m"
+cyan="\033[1;36m"
+white="\033[1;37m"
+
+cl0="${gray}"
+cl1="${red}"
+cl2="${green}"
+cl3="${yellow}"
+cl4="${blue}"
+cl5="${magenta}"
+cl6="${cyan}"
+cl7="${white}"
+cl9="${reset}"
+
+# Title
+
 
 # Hide/Show Fully qualified domain name.
 #
 # Default:  'off'
 # Values:   'on', 'off'
 # Flag:     --title_fqdn
-title_fqdn="on"
+title_fqdn="off"
 
 
-##--------- Kernel
+# Kernel
+
 
 # Shorten the output of the kernel function.
 #
@@ -60,7 +88,8 @@ title_fqdn="on"
 kernel_shorthand="on"
 
 
-##--------- Distro
+# Distro
+
 
 # Shorten the output of the distro function
 #
@@ -80,10 +109,11 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="on"
+os_arch="off"
 
 
-##--------- Uptime
+# Uptime
+
 
 # Shorten the output of the uptime function
 #
@@ -95,10 +125,11 @@ os_arch="on"
 # on:   '2 days, 10 hours, 3 mins'
 # tiny: '2d 10h 3m'
 # off:  '2 days, 10 hours, 3 minutes'
-uptime_shorthand="on"
+uptime_shorthand="tiny"
 
 
-##--------- Memory
+# Memory
+
 
 # Show memory pecentage in output.
 #
@@ -121,10 +152,11 @@ memory_percent="on"
 # kib  '1020928KiB / 7117824KiB'
 # mib  '1042MiB / 6951MiB'
 # gib: ' 0.98GiB / 6.79GiB'
-memory_unit="Gib"
+memory_unit="mib"
 
 
-##--------- Packages
+# Packages
+
 
 # Show/Hide Package Manager names.
 #
@@ -139,7 +171,8 @@ memory_unit="Gib"
 package_managers="on"
 
 
-##--------- Shell
+# Shell
+
 
 # Show the path to $SHELL
 #
@@ -164,7 +197,8 @@ shell_path="off"
 shell_version="on"
 
 
-##--------- CPU
+# CPU
+
 
 # CPU speed type
 #
@@ -173,7 +207,7 @@ shell_version="on"
 # Flag:    --speed_type
 # Supports: Linux with 'cpufreq'
 # NOTE: Any file in '/sys/devices/system/cpu/cpu0/cpufreq' can be used as a value.
-speed_type="scaling_max_freq"
+speed_type="bios_limit"
 
 # CPU speed shorthand
 #
@@ -185,7 +219,7 @@ speed_type="scaling_max_freq"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="on"
+speed_shorthand="off"
 
 # Enable/Disable CPU brand in output.
 #
@@ -235,14 +269,15 @@ cpu_cores="logical"
 # NOTE: For FreeBSD and NetBSD-based systems, you'll need to enable
 #       coretemp kernel module. This only supports newer Intel processors.
 #
-# Example: sudo rm /var/lib/pacman/db.lck
+# Example:
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="on"
+cpu_temp="off"
 
 
-##--------- GPU
+# GPU
+
 
 # Enable/Disable GPU Brand
 #
@@ -275,7 +310,8 @@ gpu_brand="on"
 gpu_type="all"
 
 
-##--------- Resolution
+# Resolution
+
 
 # Display refresh rate next to each monitor
 # Default: 'off'
@@ -286,10 +322,11 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="on"
+refresh_rate="off"
 
 
-##--------- Gtk Theme / Icons / Font
+# Gtk Theme / Icons / Font
+
 
 # Shorten output of GTK Theme / Icons / Font
 #
@@ -300,7 +337,8 @@ refresh_rate="on"
 # Example:
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
-gtk_shorthand="off"
+gtk_shorthand="on"
+
 
 # Enable/Disable gtk2 Theme / Icons / Font
 #
@@ -311,7 +349,7 @@ gtk_shorthand="off"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Adwaita [GTK3]'
-gtk2="off"
+gtk2="on"
 
 # Enable/Disable gtk3 Theme / Icons / Font
 #
@@ -322,10 +360,11 @@ gtk2="off"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Numix [GTK2]'
-gtk3="off"
+gtk3="on"
 
 
-##--------- IP Address
+# IP Address
+
 
 # Website to ping for the public IP
 #
@@ -341,7 +380,9 @@ public_ip_host="http://ident.me"
 # Flag:    --ip_timeout
 public_ip_timeout=2
 
+
 # Desktop Environment
+
 
 # Show Desktop Environment version
 #
@@ -351,7 +392,8 @@ public_ip_timeout=2
 de_version="on"
 
 
-##--------- Disk
+# Disk
+
 
 # Which disks to display.
 # The values can be any /dev/sdXX, mount point or directory.
@@ -369,7 +411,7 @@ de_version="on"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/')
+disk_show=('/storage/emulated' '/' '/server')
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
@@ -393,7 +435,7 @@ disk_show=('/')
 # none:   'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
-disk_subtitle="mount"
+disk_subtitle="none"
 
 # Disk percent.
 # Show/Hide disk percent.
@@ -408,7 +450,8 @@ disk_subtitle="mount"
 disk_percent="on"
 
 
-##--------- Song
+# Song
+
 
 # Manually specify a music player.
 #
@@ -492,7 +535,8 @@ song_shorthand="off"
 mpc_args=()
 
 
-##--------- Text Colors
+# Text Colors
+
 
 # Text Colors
 #
@@ -506,10 +550,13 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+# colors=(7 7 7 7 8 250)
+colors=(7 7 7 7 7 7)
 
 
-##--------- Text Options
+
+# Text Options
+
 
 # Toggle bold text
 #
@@ -530,7 +577,8 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="󰍴"
+underline_char="-"
+
 
 # Info Separator
 # Replace the default separator with the specified string.
@@ -541,9 +589,12 @@ underline_char="󰍴"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
+#separator=" "
 separator=" "
 
-##--------- Color Blocks
+
+# Color Blocks
+
 
 # Color block range
 # The range of colors to print.
@@ -559,34 +610,7 @@ separator=" "
 #
 # Display colors 0-15 in the blocks. (16 colors)
 # neofetch --block_range 0 15
-#block_range=(8 15)
-block_range=(1 8)
-
-# Colors for custom colorblocks
-#colors
-#bold="(tput bold)"
-magenta="\033[1;35m"
-green="\033[1;32m"
-white="\033[1;37m"
-blue="\033[1;34m"
-red="\033[1;31m"
-black="\033[1;40;30m"
-yellow="\033[1;33m"
-cyan="\033[1;36m"
-reset="\033[0m"
-bgyellow="\033[1;43;33m"
-bgwhite="\033[1;47;37m"
-cl0="${reset}"
-cl1="${magenta}"
-cl2="${green}"
-cl3="${white}"
-cl4="${blue}"
-cl5="${red}"
-cl6="${yellow}"
-cl7="${cyan}"
-cl8="${black}"
-cl9="${bgyellow}"
-cl10="${bgwhite}"
+block_range=(0 15)
 
 # Toggle color blocks
 #
@@ -600,7 +624,7 @@ color_blocks="on"
 # Default:  '3'
 # Values:   'num'
 # Flag:     --block_width
-block_width=4
+block_width=3
 
 # Color block height in lines
 #
@@ -608,7 +632,6 @@ block_width=4
 # Values:   'num'
 # Flag:     --block_height
 block_height=1
-
 
 # Color Alignment
 #
@@ -624,7 +647,8 @@ block_height=1
 # col_offset=7      - Leave 7 spaces then print the colors
 col_offset="auto"
 
-##--------- Progress Bars
+# Progress Bars
+
 
 # Bar characters
 #
@@ -666,6 +690,7 @@ bar_length=15
 bar_color_elapsed="distro"
 bar_color_total="distro"
 
+
 # Info display
 # Display a bar with the info.
 #
@@ -681,13 +706,14 @@ bar_color_total="distro"
 # infobar: 'info [---=======]'
 # barinfo: '[---=======] info'
 # off:     'info'
-cpu_display="on"
-memory_display="on"
-battery_display="on"
-disk_display="on"
+cpu_display="off"
+memory_display="off"
+battery_display="off"
+disk_display="off"
 
 
-##--------- Backend Settings
+# Backend Settings
+
 
 # Image backend.
 #
@@ -709,10 +735,11 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="/home/nikita/.config/neofetch/ascii.txt"
+image_source="$HOME/.config/neofetch/ascii.txt"
 
 
-##--------- Ascii Options
+# Ascii Options
+
 
 # Ascii distro
 # Which distro's ascii art to display.
@@ -782,7 +809,8 @@ ascii_colors=(distro)
 ascii_bold="on"
 
 
-##--------- Image Options
+# Image Options
+
 
 # Image loop
 # Setting this to on will make neofetch redraw the image constantly until
@@ -853,7 +881,7 @@ xoffset=0
 background_color=
 
 
-##--------- Misc Options
+# Misc Options
 
 # Stdout mode
 # Turn off all colors and disables image backend (ASCII/Image).
