--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,11 +1,11 @@
 # Application bindings
 $terminal = uwsm app -- $TERMINAL
-$browser = uwsm app -- helium-browser --ozone-platform=wayland
+$browser = uwsm app -- helium-browser --ozone-platform=x11 %U
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER, M, Music, exec, spotify & hyprctl dispatch workspace 10
+bindd = SUPER, M, Music, exec, spotify & hyprctl dispatch workspace 11
 bindd = SUPER, O, notes, exec, omarchy-launch-or-focus notion-app-electron
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, T, Activity, exec, $terminal -e btop
