--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark256'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 ##### mouse and selection
 set -g mouse on
@@ -54,5 +53,5 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # below this are any theme or plugin overrides
 
-set -g status-right '' 
-set -g status-position top
+set -g status-right ''  #clears the right side, it would normally have the time and my username which I don't need
+set -g status-position top # set the statusbar to the top
