--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,9 +2,10 @@
 config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 
 # Font
-font-family = "MesloLGS Nerd Font"
-font-style = Regular
-font-size = 13
+font-family = OMARCHY
+font-size = 12
+adjust-cell-height=5%
+
 
 # Window
 window-padding-x = 0
@@ -14,9 +15,8 @@ resize-overlay = never
 
 
 # Keyboard bindings
-keybind = f11=toggle_fullscreen
 keybind = ctrl+backspace=text:\x17
-keybind= ctrl+delete=text:\x1b[3;5~
+keybind= ctrl+delete=text:ESC[3~
 keybind = ctrl+shift+c=copy_to_clipboard
 keybind = ctrl+v=paste_from_clipboard
 keybind = shift+insert=paste_from_selection
