some changes i don

--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -32,3 +32,4 @@ windowrule = scrolltouchpad 1.5, tag:terminal
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
 gesture = 3, horizontal, workspace
+gesture = 2, left, dispatcher, sendshortcut, ALT, left
