--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -6,8 +6,7 @@ bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER, M, Music, exec, spotify & hyprctl dispatch workspace 11
-bindd = SUPER, O, notes, exec, omarchy-launch-or-focus notion-app-electron
-bindd = SUPER, N, Editor, exec, omarchy-launch-editor
+bindd = SUPER, N, Notepad, exec, $terminal -e $SHELL -lc "cd ~/notes/ && nvim"
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
