--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark256'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 ##### mouse and selection
 set -g mouse on
