occtober 19th + omarchy update

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -15,6 +15,8 @@ decorations = "None"
 [keyboard]
 bindings = [
 { key = "F11", action = "ToggleFullscreen" },
+{ key = "Insert", mods = "Shift", action = "Paste" },
+{ key = "Insert", mods = "Control", action = "Copy" },
 #save_to_clipboard
  { key = "C", mods = "Control|Shift", action = "Copy" },
   { key = "V", mods = "Control", action = "Paste" },
