--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -12,7 +12,7 @@ bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
-bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
+bindd = SUPER, A, AI, exec, omarchy-launch-webapp "https://claude.ai"
 bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com/calendar/u/1/r"
 bindd = SUPER, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
