--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -20,3 +20,4 @@ keybind= ctrl+delete=text:ESC[3~
 keybind = ctrl+shift+c=copy_to_clipboard
 keybind = ctrl+v=paste_from_clipboard
 keybind = shift+insert=paste_from_selection
+keybind = shift+enter=text:\x1b\r
