changed default browser to chromium

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,6 +1,6 @@
 # Application bindings
 $terminal = uwsm app -- $TERMINAL
-$browser = uwsm app -- helium-browser --ozone-platform=x11 %U
+$browser = uwsm app -- chromium
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
