--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -4,7 +4,7 @@ $browser = uwsm app -- helium-browser
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, B, Browser, exec, $browser
+bindd = SUPER, B, Browser, exec, ~/.config/hypr/scripts/focus-or-launch-browser.sh "$browser"
 bindd = SUPER, M, Music, exec, spotify & hyprctl dispatch workspace 11
 bindd = SUPER, N, Notepad, exec, $terminal -e $SHELL -lc "cd ~/notes/ && nvim"
 bindd = SUPER, T, Activity, exec, $terminal -e btop
