--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,12 +1,14 @@
 # Application bindings
 $terminal = uwsm app -- $TERMINAL
-$browser = uwsm app -- helium-browser
+$browser = uwsm app -- google-chrome-stable
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, B, Browser, exec, ~/.config/hypr/scripts/focus-or-launch-browser.sh "$browser"
+bindd = SUPER, B, Browser, exec, $browser
+bindd = SUPER_SHIFT, B, Private Browser, exec, uwsm app -- helium-browser --incognito
 bindd = SUPER, M, Music, exec, spotify & hyprctl dispatch workspace 11
-bindd = SUPER, N, Notepad, exec, $terminal -e $SHELL -lc "cd ~/notes/ && nvim"
+bindd = SUPER_SHIFT, N, Saved Notepad, exec, $terminal -e $SHELL -lc "nvim ~/Documents/notes/note.txt"
+bindd = SUPER, N, Notepad, exec, $terminal -e $SHELL -lc "nvim /tmp/note.txt"
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
@@ -22,3 +24,4 @@ bindd = SUPER, X, X, exec, omarchy-launch-webapp  "https://www.x.com"
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+
