--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -15,5 +15,7 @@ resize-overlay = never
 
 
 # Keyboard bindings
+keybind = ctrl+backspace=text:\x17
 keybind = ctrl+shift+c=copy_to_clipboard
 keybind = ctrl+v=paste_from_clipboard
+keybind = shift+enter=text:\x1b\r
