turned off mouse acceleration lol

--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -13,8 +13,8 @@ input {
   numlock_by_default = true
 
   # Increase sensitity for mouse/trackpack (default: 0)
-  # sensitivity = 0.35
-
+  # sensitivity = 
+  accel_profile=flat
   touchpad {
     # Use natural (inverse) scrolling
     natural_scroll = true
