update to omarchy changed up bindings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,8 @@
 # Use defaults Omarchy defaults (but don't edit these directly!)
 source = ~/.local/share/omarchy/default/hypr/autostart.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/media.conf
-source = ~/.local/share/omarchy/default/hypr/bindings/tiling.conf
+source = ~/.local/share/omarchy/default/hypr/bindings/clipboard.conf
+source = ~/.local/share/omarchy/default/hypr/bindings/tiling-v2.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/utilities.conf
 source = ~/.local/share/omarchy/default/hypr/envs.conf
 source = ~/.local/share/omarchy/default/hypr/looknfeel.conf
@@ -19,5 +20,5 @@ source = ~/.config/hypr/envs.conf
 source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/autostart.conf
 
-exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
-exec = hyprshade auto
+# Add any other personal Hyprland configuration below
+# windowrule = workspace 5, class:qemu
