--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,25 +1,24 @@
 # Application bindings
-$terminal = uwsm app -- $TERMINAL
-$browser = uwsm app -- helium-browser
+$terminal = uwsm-app -- xdg-terminal-exec
+$browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER_SHIFT, B, Private Browser, exec, uwsm app -- helium-browser --incognito
-bindd = SUPER, M, Music, exec, spotify & hyprctl dispatch workspace 11
-bindd = SUPER, N, Notepad, exec, $terminal -e $SHELL -lc "nvim /tmp/note.txt"
-bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
+bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
+bindd = SUPER , B, Browser, exec, $browser
+bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
+bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER , N, Editor, exec, omarchy-launch-editor
+bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
+bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER , SLASH, Passwords, exec, uwsm-app -- 1password
 
-# If your web app url contains #, type it as ## to prevent hyperland treat it as comments
+
 bindd = SUPER, A, AI, exec, omarchy-launch-webapp "https://claude.ai"
 bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com/calendar/u/1/r"
-bindd = SUPER, G, Github, exec, omarchy-launch-webapp "https://github.com/"
+bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
 bindd = SUPER, L, Linear, exec, omarchy-launch-webapp "https://linear.app/panday-team/team/PAN/all"
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
-
