--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,7 +5,7 @@ config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 font-family = OMARCHY
 font-size = 13
 
-adjust-cell-height=5%
+# adjust-cell-height=5%
 
 # Window
 window-padding-x = 0
