--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -8,12 +8,13 @@ bindd = SUPER , B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER , N, Editor, exec, omarchy-launch-editor
-bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
-bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
+bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER , SLASH, Passwords, exec, uwsm-app -- 1password
 
 
-bindd = SUPER, A, AI, exec, omarchy-launch-webapp "https://claude.ai"
+bindd = SUPER SHIFT, A, AI, exec, omarchy-launch-webapp "https://aistudio.google.com"
+bindd = SUPER, A, AI, exec, omarchy-launch-webapp "https://t3.chat"
 bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com/calendar/u/1/r"
 bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
