--- a/.config/hypr/hyprshade.toml
+++ b/.config/hypr/hyprshade.toml
@@ -3,6 +3,6 @@ name = "vibrance"
 default = true
 
 [[shades]]
-name = "blue-light-filter"
-start_time = 19:00:00
+name = "blue-light-reduce"
+start_time = 21:00:00
 end_time = 06:00:00
