--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -19,3 +19,6 @@ keybind = ctrl+backspace=text:\x17
 keybind = ctrl+shift+c=copy_to_clipboard
 keybind = ctrl+v=paste_from_clipboard
 keybind = shift+enter=text:\x1b\r
+
+# Slowdown mouse scrolling
+mouse-scroll-multiplier = 0.95
