--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -30,6 +30,7 @@
       "7": "7",
       "8": "8",
       "9": "9",
+      "10": "0",
       "active": "◻️",
     },
     "persistent-workspaces": {
@@ -117,13 +118,14 @@
   "bluetooth": {
     "format": "",
     "format-disabled": "󰂲",
-    "format-connected": "",
+    "format-connected": "󰂱",
+    "format-no-controller": "",
     "tooltip-format": "Devices connected: {num_connections}",
-    "on-click": "blueberry",
+    "on-click": "omarchy-launch-bluetooth",
   },
   "pulseaudio": {
     "format": "{icon}",
-    "on-click": "xdg-terminal-exec --app-id=com.omarchy.Wiremix -e wiremix",
+    "on-click": "omarchy-launch-or-focus-tui wiremix",
     "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
     "scroll-step": 5,
