--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -13,8 +13,8 @@
 
 # Straight 1x setup for low-resolution displays like 1080p or 1440p
 env = GDK_SCALE,1
-monitor = DP-3,1920x1080@143.98, 0x0, 1
-monitor = eDP-1,1920x1080@60.00, 1920x0,1
+monitor = DP-3, 1920x1080@143.98, 0x0, 1
+monitor = eDP-1, 1920x1080@60.00, 1920x0, 1
 
 workspace = name:main, monitor:DP-1, default:true
 
