--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -11,10 +11,11 @@ bindd = SUPER , N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER , SLASH, Passwords, exec, uwsm-app -- 1password
+bindd = SUPER, d, Discord, exec, omarchy-launch-or-focus vesktop
 
 
 bindd = SUPER SHIFT, A, AI, exec, omarchy-launch-webapp "https://aistudio.google.com"
-bindd = SUPER, A, AI, exec, omarchy-launch-webapp "https://t3.chat"
+bindd = SUPER, A, AI, exec, omarchy-launch-webapp "https://gemini.google.com/app"
 bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com/calendar/u/1/r"
 bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
@@ -22,4 +23,3 @@ bindd = SUPER, L, Linear, exec, omarchy-launch-webapp "https://linear.app/panday
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
