update monitors to fix the underlying issue

--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -13,10 +13,18 @@
 
 # Straight 1x setup for low-resolution displays like 1080p or 1440p
 env = GDK_SCALE,1
-monitor = DP-3, 1920x1080@143.98, 0x0, 1
-monitor = eDP-1, 1920x1080@60.00, 1920x0, 1
 
-workspace = name:main, monitor:DP-1, default:true
+# External monitor (primary when connected) - using description for port flexibility
+monitor = desc:LG Electronics LG ULTRAGEAR, 1920x1080@143.98, 0x0, 1
+
+# Laptop display (secondary when external connected, primary when alone)
+monitor = eDP-1, 1920x1080@60, 1920x0, 1
+
+# Fallback - any other monitor gets auto-configured
+monitor = , preferred, auto, 1
+
+# Default workspace on external monitor
+workspace = name:main, monitor:desc:LG Electronics LG ULTRAGEAR, default:true
 
 # Example for Framework 13 w/ 6K XDR Apple display
 # monitor = DP-5, 6016x3384@60, auto, 2
