--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -21,5 +21,6 @@ bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
 bindd = SUPER, L, Linear, exec, omarchy-launch-webapp "https://linear.app/panday-team/team/PAN/all"
 
+bind = SUPER SHIFT, M, movewindow, mon:DP-3
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
