--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -26,6 +26,7 @@ monitor = , preferred, auto, 1
 # Default workspace on external monitor
 workspace = name:main, monitor:desc:LG Electronics LG ULTRAGEAR, default:true
 
+windowrulev2 = monitor DP-3, class:^(Tabletop Simulator)$
 # Example for Framework 13 w/ 6K XDR Apple display
 # monitor = DP-5, 6016x3384@60, auto, 2
 # monitor = eDP-1, 2880x1920@120, auto, 3
