--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -16,7 +16,7 @@ bindd = SUPER, d, Discord, exec, omarchy-launch-or-focus vesktop
 
 bindd = SUPER SHIFT, A, AI, exec, omarchy-launch-webapp "https://aistudio.google.com"
 bindd = SUPER, A, AI, exec, omarchy-launch-webapp "https://gemini.google.com/app"
-bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com/calendar/u/1/r"
+bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.notion.so/"
 bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://mail.google.com/mail/u/1"
 bindd = SUPER, L, Linear, exec, omarchy-launch-webapp "https://linear.app/panday-team/team/PAN/all"
