--- a/.config/hypr/envs.conf
+++ b/.config/hypr/envs.conf
@@ -1,2 +1,5 @@
 # Extra env variables
 # env = MY_GLOBAL_ENV,setting
+
+# Force Mesa EGL for Intel GPU (fixes WebKitGTK EGL issues with NVIDIA libs present)
+env = __EGL_VENDOR_LIBRARY_FILENAMES,/usr/share/glvnd/egl_vendor.d/50_mesa.json
