--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,3 +21,25 @@ source = ~/.config/hypr/autostart.conf
 
 # Add any other personal Hyprland configuration below
 # windowrule = workspace 5, class:qemu
+
+# Pluely - AI overlay app (like Cluely)
+# The AI Assistant bar should float, stay on top, and be pinned (visible on all workspaces)
+windowrule {
+  name = pluely-assistant
+  match:class = Pluely
+  match:title = .*AI Assistant.*
+  
+  float = on
+  pin = on
+  no_focus = on
+  no_blur = on
+}
+
+# The Dashboard window should be minimized/hidden - send to special workspace
+windowrule {
+  name = pluely-dashboard
+  match:class = Pluely
+  match:title = .*Dashboard.*
+  
+  workspace = special:pluely silent
+}
