--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -26,9 +26,7 @@ input {
   }
 }
 
-# Scroll faster in the terminal
-windowrule = scrolltouchpad 1.5, tag:terminal
-
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
-gesture = 3, horizontal, workspace
+gesture = 3, l, workspace, e+1
+gesture = 3, r, workspace, e-1
