--- a/.config/hypr/looknfeel.conf
+++ b/.config/hypr/looknfeel.conf
@@ -5,16 +5,19 @@ general {
     # No gaps between windows
     gaps_in = 2
     gaps_out = 0
-    float_gaps=0
+    float_gaps = 0
     # Use master layout instead of dwindle
     # layout = master
-    workspace = 11, on-created-empty:spotify, persistent:true
-  windowrulev2 = workspace 11 silent, class:^(Spotify)$
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     # inactive_opacity=1
     # active_opacity=1
-    windowrule = opacity 1 0.96, class:.*
 }
+
+# Window rules (must be outside blocks)
+workspace = 11, on-created-empty:spotify, persistent:true
+windowrulev2 = workspace 11 silent, class:^(Spotify)$
+# Override default opacity - active window fully opaque, inactive slightly transparent
+windowrule = opacity 1.0 0.96, match:class .*
