--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -23,7 +23,7 @@ background {
      outer_color = $outer_color
      outline_thickness = 2
 
-     font_family = MesloLGM Nerd Font
+     font_family = GeistMono Nerd Font
      font_color = $font_color
 
      placeholder_text = Enter Password
@@ -40,7 +40,7 @@ label {
   text = cmd[update:1000] echo "$(date +"%A, %B %d")"
   color= $font_color
   font_size = 24
-  font_family = MesloLGM Nerd Font
+  font_family = GeistMono Nerd Font
   position = 0, 300
   halign = center
   valign = center
@@ -50,7 +50,7 @@ label {
     text = cmd[update:1000] echo "$(date +"%-I:%M")"
     color = $font_color
     font_size = 96
-    font_family = MesloLGM Nerd Font
+    font_family = GeistMono Nerd Font
 
     position = 0, 200
     halign = center
